tests/samples/valid/position.pn
pub word64 Position
{
	x: i32,
	y: i32,
}
