tests/samples/invalid/too_many_arguments.pn

fn foo(x: i32, y: i32)
{
	return:
	x + y
}

fn main()
{
	return:
	foo(1, 2, 3)
}
